<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:baselineAligned="false"
android:orientation="vertical"
android:background="@drawable/background">

<RelativeLayout
    android:id="@+id/topItem"
    android:layout_width="match_parent"
    android:layout_height="0px"
    android:layout_weight="1">

    <Button
        android:id="@+id/game_screen_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Menu"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score: $0"
        android:id="@+id/game_score"
        android:layout_toRightOf="@id/game_screen_menu"
        android:layout_toEndOf="@id/game_screen_menu"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/game_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="Pause"
        android:onClick="pauseAndResume"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/game_screen_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/game_pause"
        android:layout_toStartOf="@id/game_pause"
        android:text="Donate"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"/>

</RelativeLayout>

<LinearLayout
    android:id="@+id/middleItem"
    android:layout_width="match_parent"
    android:layout_height="0px"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_timer_display"
        android:text="29"
        android:textAlignment="center"
        android:textColor="#d43e0c"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/demo_question"
        android:id="@+id/game_questions"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

</LinearLayout>

<LinearLayout
    android:id="@+id/bottomItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/topOptions">
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:id="@+id/option1"
            android:onClick="submitAnswer"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"/>
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/option2"
            android:id="@+id/option2"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:onClick="submitAnswer"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/topOptions">
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/option3"
            android:layout_weight="1"
            android:id="@+id/option3"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:onClick="submitAnswer"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/buttonshape"/>
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/option4"
            android:id="@+id/option4"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:onClick="submitAnswer"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonshape"/>
    </LinearLayout>



</LinearLayout>
</LinearLayout>